baml_language/crates/baml_tests/snapshots/compiles/host_callable_call/baml_tests__compiles__host_callable_call__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.call_with_callback(callback: (int) -> string, x: int) -> string  [expr] {
  {  } callback(x)
}
