baml_language/crates/baml_tests/snapshots/compiles/host_callable_call/baml_tests__compiles__host_callable_call__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.call_with_callback(callback: (int) -> string throws never, x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: (int) -> string throws never // callback // param
    let _2: int // x // param

    bb0: {
        _0 = call copy _1(copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}
