baml_language/crates/baml_tests/snapshots/compiles/host_callable_call/baml_tests__compiles__host_callable_call__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.call_with_callback(callback: (int) -> string throws never, x: int) -> string throws never {
  { : string
    callback<__effect_param_0>(x) : string
  }
}
