baml_language/crates/baml_tests/snapshots/compiles/host_callable_call/baml_tests__compiles__host_callable_call__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = #0, Throws = #1>, args: map<string, unknown>) -> #0 {
}

function reflect.signature(f: baml.AnyFunction) -> reflect.Signature {
}

function user.call_with_callback(callback: (int) -> string throws never, x: int) -> string {
    load_var2 2 1
    call_indirect
    return
}
